<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">E-LEARNING</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="vocabulary">VOCABULARY</string>
    <string name="exercise">EXERCISE</string>
    <string name="test">ENGLISH TESTS</string>
    <string name="short_stories">SHORT STORIES</string>
    <string name="vocabulary_bt">Vocabulary</string>
    <string name="exercise_bt">Exercise</string>
    <string name="test_bt">English tests</string>
    <string name="results">RESULTS</string>
    <string name="short_stories_bt">Short Stories</string>

</resources>
