<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="10"
        android:background="@drawable/bg1"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="100" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/previous"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/pre" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="80"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvStory_lesson"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:gravity="center"
                android:text=""
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_title" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90"
        android:background="@drawable/pt10"
        android:orientation="vertical"
        android:weightSum="100" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="30"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imgS"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="55" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvStory_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:text=" "
                    android:textAlignment="gravity"
                    android:textColor="@color/black"
                    android:textSize="25dp" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="15"
            android:background="@drawable/bg1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="100" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imgSLvol"
                    android:layout_width="@dimen/item_height"
                    android:layout_height="@dimen/item_height"
                    android:src="@drawable/vol1" />

                <TextView
                    android:id="@+id/tvVol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vocabulary_bt"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imgSLexer"
                    android:layout_width="@dimen/item_height"
                    android:layout_height="@dimen/item_height"
                    android:src="@drawable/fav1" />

                <TextView
                    android:id="@+id/tvExer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exercise_bt"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imgSLtest"
                    android:layout_width="@dimen/item_height"
                    android:layout_height="@dimen/item_height"
                    android:src="@drawable/pro1" />

                <TextView
                    android:id="@+id/tvTest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_bt"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imgSLstory"
                    android:layout_width="@dimen/item_height"
                    android:layout_height="@dimen/item_height"
                    android:src="@drawable/story1" />

                <TextView
                    android:id="@+id/tvStory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/short_stories_bt"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>